# tom_demark_indicator

./: .env.example  .gitignore  BLUEPRINT.md  CHANGELOG.md  Legends.md  export_for_nextjs.py  pyproject.toml  run_daily.py
NextJS/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
NextJS/components/: ChartControls.module.css  ChartControls.tsx  SummaryCard.module.css  SummaryCard.tsx  TdChart.tsx
NextJS/lib/: dataLoader.ts
NextJS/pages/: index.module.css  index.tsx
NextJS/pages/symbol/: [ticker].tsx  ticker.module.css
NextJS/styles/: globals.css
NextJS/types/: td.ts
tests/: test_json_schema.py
tom_demark_indicator/: __init__.py  cli.py  config.py  data_loader.py  discord_notifier.py  exporter.py  formatter.py  indicators.py  plotting_mpf.py  signals.py  td_sequential.py
